changes to fix css bleeding on attendance

--- a/app/components/SecondPage.module.css
+++ b/app/components/SecondPage.module.css
@@ -1,6 +1,6 @@
 .secondPage{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 12pt;
+    font-size: 11pt;
      display: flex;
   flex-direction: column;
   min-height: 100vh; 
@@ -72,11 +72,13 @@
 .gradingTable td {
   border: 1px solid black;
   padding-left: 2px;
+  padding-right: 2px;
+
 }
 
 .gradingTable thead th {
   background-color: #d3d3d3; /* grey header */
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .gradingTable tbody tr:nth-child(even) {
@@ -118,5 +120,5 @@
   line-height: 1;
 }
 .boldgrade {
-  font-weight: bold;
+  font-weight: 600;
 }
